Replace absolute by fixed to prevent page jump after scroll

--- a/styles/index.css
+++ b/styles/index.css
@@ -96,7 +96,7 @@ sme-dropdown > input {
 	clip-path: inset(50%);
 	height: 1px;
 	overflow: hidden;
-	position: absolute;
+	position: fixed;
 	white-space: nowrap;
 	width: 1px;
 }
